Fix for the arrow bubble in comments. Also removed the overflow property. Looked fine in Chrome, terrbile in Firefox. h/t/ @mrichardson23

--- a/less/make/style.less
+++ b/less/make/style.less
@@ -953,7 +953,7 @@ Time for a Dr. Pepper?
 }
 .commentlist .children li.comment .comment-content {
 	margin: 1.625em 0 0;
-	overflow: scroll;
+	/* overflow: scroll; */
 }
 .comment-meta a {
 	font-weight: bold;
@@ -974,7 +974,7 @@ Time for a Dr. Pepper?
 	top: 0;
 }
 .commentlist > li:before {
-	content: url(img/comment-arrow.png);
+	content: url(../img/comment-arrow.png);
 	left: -21px;
 	position: absolute;
 }
@@ -1041,7 +1041,7 @@ a.comment-reply-link > span {
 	}
 
 .commentlist > li.comment-author-whyisjake:before, .commentlist > li.comment-author-jspurlock:before {
-	content: url(img/comment-arrow-blank.png);
+	content: url(../img/comment-arrow-blank.png);
 	left: -21px;
 	position: absolute;
 }
